# woven-shell

./: Cargo.toml  LICENSE  README.md  get.sh  install.sh  woven-session.service
config/: bar.toml  control-center.sh  keybinds.toml  launch.toml  lock.toml  wall.toml
config/themes/: catppuccin.toml  gruvbox.toml
crates/woven-bar/: Cargo.toml
crates/woven-bar/src/: bar.rs  config.rs  draw.rs  icons.rs  main.rs  sway.rs  text.rs  wayland.rs
crates/woven-bar/src/widgets/: activities.rs  audio.rs  battery.rs  clock.rs  control_center.rs  cpu.rs  disk.rs  media.rs  memory.rs  mod.rs  network.rs  notifications.rs  systray.rs  temp.rs  weather.rs  window_title.rs  workspaces.rs
crates/woven-cc/: Cargo.toml
crates/woven-cc/src/: main.rs  panel.rs  surface.rs
crates/woven-cfg/: Cargo.toml
crates/woven-cfg/src/: config.rs  main.rs  panel.rs  surface.rs
crates/woven-cfg/src/tabs/: bar.rs  launch.rs  lock.rs  mod.rs  sway.rs  theme.rs  wall.rs
crates/woven-cfg/src/widgets/: mod.rs
crates/woven-common/: Cargo.toml
crates/woven-common/src/: draw.rs  lib.rs  session.rs  text.rs
crates/woven-launch/: Cargo.toml
crates/woven-launch/src/: calc.rs  config.rs  desktop.rs  draw.rs  icons.rs  main.rs  render.rs  search.rs  wayland.rs
crates/woven-lock/: Cargo.toml
crates/woven-lock/src/: auth.rs  blur.rs  config.rs  draw.rs  lib.rs  main.rs  render.rs  text.rs  wayland.rs
crates/woven-osd/: Cargo.toml
crates/woven-osd/src/: daemon.rs  main.rs  read.rs  render.rs  state.rs  surface.rs
crates/woven-pick/: Cargo.toml
crates/woven-pick/src/: draw.rs  main.rs  picker.rs  wayland.rs
crates/woven-power/: Cargo.toml
crates/woven-power/src/: main.rs  panel.rs  surface.rs
crates/woven-screenshot/: Cargo.toml
crates/woven-screenshot/src/: main.rs
crates/woven-session/: Cargo.toml
crates/woven-session/src/: battery.rs  command.rs  main.rs  media.rs  socket.rs  state.rs
crates/woven-switch/: Cargo.toml
crates/woven-switch/src/: main.rs
crates/woven-wall/: Cargo.toml
crates/woven-wall/src/: config.rs  main.rs  theme.rs  wayland.rs
crates/woven-wall/src/sources/: color.rs  gif.rs  gradient.rs  mod.rs  slideshow.rs  static_img.rs  video.rs
