[workspace]
members = ["crates/woven-common", "crates/woven-bar", "crates/woven-cc", "crates/woven-power", "crates/woven-wall", "crates/woven-pick", "crates/woven-lock", "crates/woven-launch", "crates/woven-cfg", "crates/woven-osd"]
resolver = "2"

[workspace.dependencies]
# async
tokio           = { version = "1", features = ["full"] }
anyhow          = "1"
thiserror       = "2"

# wayland
smithay-client-toolkit = "0.20"
wayland-client         = "0.31"
wayland-protocols      = { version = "0.32", features = ["client", "staging"] }
wayland-protocols-wlr  = { version = "0.3",  features = ["client"] }

# rendering
tiny-skia = "0.11"
fontdue   = "0.9"
chrono    = { version = "0.4", features = ["clock"] }
image     = { version = "0.25", default-features = false, features = ["jpeg"] }

# serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# auth
pam              = "0.8"

# system
rustix           = { version = "1", features = ["event", "mm", "fs", "time"] }
crossbeam-channel = "0.5"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
