[package]
name    = "woven-cfg"
version = "0.1.0"
edition = "2021"
description = "woven-shell config manager"

[[bin]]
name = "woven-cfg"
path = "src/main.rs"

[dependencies]
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tiny-skia          = { workspace = true }
fontdue            = { workspace = true }
rustix             = { workspace = true }
serde              = { workspace = true }

smithay-client-toolkit = { workspace = true }
wayland-client         = { workspace = true }
wayland-protocols      = { workspace = true }
wayland-protocols-wlr  = { workspace = true }

woven-common = { path = "../woven-common" }

toml     = "0.8"
xkeysym  = "0.2"
libc     = "0.2"
