[package]
name = "woven-screenshot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace           = true
tokio.workspace            = true
tracing.workspace          = true
tracing-subscriber.workspace = true
serde.workspace            = true
serde_json.workspace       = true
smithay-client-toolkit.workspace = true
wayland-client.workspace   = true
wayland-protocols.workspace = true
wayland-protocols-wlr.workspace = true
tiny-skia.workspace        = true
fontdue.workspace          = true
rustix.workspace           = true
image.workspace            = true
libc = "0.2"
