[package]
name = "woven-session"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace           = true
thiserror.workspace        = true
tokio.workspace            = true
tracing.workspace          = true
tracing-subscriber.workspace = true
serde.workspace            = true
serde_json.workspace       = true
toml.workspace             = true
zbus.workspace             = true
libc = "0.2"
