[package]
name        = "woven-wall"
version     = "0.1.0"
edition     = "2021"
description = "woven-shell wallpaper daemon — background layer, static/animated/video"

[[bin]]
name = "woven-wall"
path = "src/main.rs"

[dependencies]
anyhow             = { workspace = true }
serde              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tiny-skia          = { workspace = true }
rustix             = { workspace = true }
crossbeam-channel  = { workspace = true }

smithay-client-toolkit = { workspace = true }
wayland-client         = { workspace = true }
wayland-protocols      = { workspace = true }
wayland-protocols-wlr  = { workspace = true }

# add png + gif on top of the workspace's jpeg
image = { workspace = true, features = ["png", "gif"] }
toml  = "0.8"
